fix: 카드컴포넌트 말줄임표 추가, 기본 가나다순으로 변경

--- a/src/components/ui/PostCard.module.css
+++ b/src/components/ui/PostCard.module.css
@@ -81,10 +81,22 @@
 .post_box > a > .content > .price > p {
   font-size: 2.4rem;
   font-weight: 600;
+  max-width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 .post_box > a > .content > .price > span {
   margin: 0;
   font-weight: 600;
+  max-width: 155px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 /* 마감완료, 지난공고  */
