fix: top버튼 transition 적용

--- a/src/components/ui/Top.module.css
+++ b/src/components/ui/Top.module.css
@@ -12,9 +12,9 @@
   text-align: center;
   font-size: 16px;
   z-index: 99999;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, .1);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
   opacity: 0;
-  transition: all .5s;
+  transition: all 0.5s;
   visibility: hidden;
 }
 
@@ -24,9 +24,7 @@
 }
 
 @media (max-width: 1199px) {
-
   .top {
     display: none;
   }
-
 }
