--- a/src/components/auth/Auth.module.css
+++ b/src/components/auth/Auth.module.css
@@ -43,15 +43,32 @@
 }
 
 .guide-box > a {
+  position: relative;
   margin-left: 1rem;
 }
 
-.guide-box > a,
-.guide-box > a:link,
-.guide-box > a:visited,
-.guide-box > a:hover,
-.guide-box > a:active {
-  text-decoration: initial;
+.guide-box > a::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: block;
+  width: 0%;
+  height: 0%;
+  padding: 0;
+  opacity: 0;
+  border-radius: var(--border-radius-md);
+  background-color: var(--gray-200);
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  transition: all 0.2s ease-out;
+}
+
+.guide-box > a:hover::after {
+  width: 100%;
+  height: 100%;
+  padding: 0.6rem 1.5rem;
+  opacity: 1;
 }
 
 @media (max-width: 480px) {
